--- a/homework5/第五课图像超分客观题.md
+++ b/homework5/第五课图像超分客观题.md
@@ -11,3 +11,6 @@
 [ 基于PaddleGAN精准唇形合成实现持枪人讲电话已关机_哔哩哔哩 (゜-゜)つロ 干杯~-bilibili](https://www.bilibili.com/video/BV1NX4y1N73u/ )
 
  [PaddleGan让一部令人难忘的黑白电影重换新生_哔哩哔哩 (゜-゜)つロ 干杯~-bilibili](https://www.bilibili.com/video/BV1754y1t7HW/ )
+
+[基于PaddleGAN一秒钟从照片到吗咿呀嘿视频_哔哩哔哩 (゜-゜)つロ 干杯~-bilibili](https://www.bilibili.com/video/BV1nK4y1P7wG/)
+
